[tool.poetry]
name = "reinforcementlearning"
version = "0.1.0"
description = ""
authors = ["Ellie2020 <elena.lestini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.24.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
